--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Nowoczesna kwiaciarnia</title>
     <link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -17,13 +18,173 @@
   </head>
   <body>
     <header class="page-header text-center">
-        <img src="img/logo-flower.png" alt="Nowy Kwiat" class="logo img-responsive">
         <h1>Nowy Kwiat <br><small>nowoczesna kwiaciarnia</small></h1>
     </header>
-    <nav>
-
+    <nav class="navbar navbar-default">
+        <div class="container nav__container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Rozwiń nawigację</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand logo-link" href="index.html"><img src="img/logo-flower.png" alt="Nowy Kwiat" class="img-responsive logo"></a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav text-center">
+                    <li class="active"><a href="index.html">Strona główna</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Nasza oferta<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Kwiaty</a></li>
+                            <li><a href="#">Bukiety i kompozycje</a></li>
+                            <li><a href="#">Stroiki i wianki</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Wystrój i dekoracje okolicznościowe</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="galeria.html">Galeria</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <script src="js/jquery-1.2.3.min.js"></script>
+    <main>
+        <article class="container article article_about">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-2">
+                    <h2 class="text-center">O nas</h2>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at arcu vel eros luctus lacinia in vitae felis. Nam lacinia eros nec dolor auctor pulvinar. Pellentesque eleifend ligula ut nisl dignissim, et aliquam odio ultricies. Donec varius, sapien pretium convallis venenatis, lacus libero placerat dolor, vitae faucibus augue tellus vel sem. Sed commodo dignissim neque, porta tincidunt purus ultricies at. Nulla pretium tempor neque, bibendum dapibus nisi aliquet sit amet. Donec nec metus placerat, tristique ligula vitae, semper dui. </p>
+                </div>
+                <div class="col-md-4">
+                    <img class="article__img" src="img/floral.png" alt="kwiaty">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </article>
+        <article class="container article article_online">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-2">
+                    <img class="col-md-12 article__img" src="img/internet.jpg" alt="człowiek przy laptopie">
+                </div>
+                <div class="col-md-4">
+                    <h2 class="text-center">Zamówienia online</h2>
+                    <p class="text-center">Sed sed mi quis libero lobortis tempus. Vivamus ac erat ut magna gravida facilisis vitae nec leo. Nulla id gravida lectus, non vulputate elit. Pellentesque convallis enim ligula, vel blandit mi tincidunt ornare. Donec eget ipsum diam. Donec euismod convallis risus nec posuere. Suspendisse potenti. Proin tincidunt dignissim sapien eget vehicula. Cras mollis lacus sit amet dolor sollicitudin ornare. Nulla faucibus dui quis sapien tristique, in pellentesque elit fermentum. Quisque hendrerit tempor mi. Praesent est sapien, placerat ut leo quis, semper tincidunt neque.</p>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </article>
+        <div class="container diagram well well-lg">
+            <div class="row">
+                <div class="col-sm-2 col-xs-12 col-sm-offset-1 text-center diagram-element">
+                    <p class="lead">Zamówienie</p><div><span class="fa fa-laptop fa-3x"></span><span class="fa fa-phone fa-3x"></span></div>
+                </div>
+                <div class="col-sm-2 col-xs-12 diagram-element">
+                    <img src="img/arrow.png" class="img-responsive arrow arrow-right" alt="strzałka">
+                </div>
+                <div class="col-sm-2 col-xs-12 text-center diagram-element">
+                    <p class="lead">Realizacja</p><span class="fa fa-spinner fa-3x slow-spin"></span>
+                </div>
+                <div class="col-sm-2 col-xs-12 diagram-element diagram-element-arrows">
+                    <div class="text-center arrow-container"><img src="img/arrow.png" class="img-responsive arrow arrow_top-right" alt="strzałka"></div>
+                    <div class="text-center arrow-container"><img src="img/arrow.png" class="img-responsive arrow arrow_bottom-right" alt="strzałka"></div>
+                </div>
+                <div class="col-sm-2 col-xs-12 diagram-element_finish">
+                    <div class="text-center"><p class="lead">Dostawa</p><span class="fa fa-truck fa-3x"></span></div>
+                    <div class="text-center"><p class="lead">Odbiór osobisty</p><span class="fa fa-building fa-3x"></span></div>
+                </div>
+            </div>
+        </div>
+        <article class="container article article_supply">
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-2">
+                    <h2 class="text-center">Nasi dostawcy</h2>
+                    <p class="text-center">Nam lacinia eros nec dolor auctor pulvinar. Pellentesque eleifend ligula ut nisl dignissim, et aliquam odio ultricies. Donec varius, sapien pretium convallis venenatis, lacus libero placerat dolor, vitae faucibus augue tellus vel sem. Sed commodo dignissim neque, porta tincidunt purus ultricies at. Nulla pretium tempor neque, bibendum dapibus nisi aliquet sit amet. Donec nec metus placerat, tristique ligula vitae, semper dui. </p>
+                </div>
+            </div>
+        </article>
+        <section class="container">
+            <div class="row">
+                <h2 class="col-xs-12 text-center">Znajdź nas na mapie <br><small>Kraków, ul. Grzegórzki 3</small></h2>
+                <div class="col-xs-12">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20489.262273667082!2d19.95291379608706!3d50.06460663311562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b25bda6c3b1%3A0x60169ae5ef5d21aa!2zR3J6ZWfDs3J6a2ksIEtyYWvDs3c!5e0!3m2!1spl!2spl!4v1502224528298" frameborder="0" allowfullscreen class="google-map"></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <h2 class="col-xs-12 text-center">Nasz zespół</h2>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/man.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/businessman.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/man.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/businessman.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/man.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/businessman.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/man.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/businessman.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/man.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/businessman.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/man.png" alt="" class="img-responsive team-member__img">
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-4 team-member">
+                    <h3 class="text-center">Zenon Brzoza<br><small>florysta</small></h3>
+                    <img src="img/businessman.png" alt="" class="img-responsive team-member__img">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="conainer-fluid footer">
+        <div class="row">
+            <section class="col-sm-3 col-sm-offset-3">
+                <h2 class="text-center">Polecane linki</h2>
+                <ul class="list-group text-center list-unstyled">
+                    <li><a href="#">Cras eget nibh lacinia</a></li>
+                    <li><a href="#">Eleifend nunc eu</a></li>
+                    <li><a href="#">Nunc iaculis metus</a></li>
+                    <li><a href="#">Morbi id elit et tellus</a></li>
+                    <li><a href="#">Egestas est suscipit</a></li>
+                </ul>
+            </section>
+            <section class="col-sm-3">
+                <h2 class="text-center">O stronie</h2>
+                <p class="text-center">Strona zrealizowana w ramach nauki.<br><b>Autor: Nilmerg.</b></p>
+            </section>
+        </div>
+    </footer>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
