kwiaty.html started

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Nasza oferta<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Kwiaty</a></li>
+                            <li><a href="kwiaty.html">Kwiaty</a></li>
                             <li><a href="#">Bukiety i kompozycje</a></li>
                             <li><a href="#">Stroiki i wianki</a></li>
                             <li class="divider"></li>
